Updating copyright. Happy New Year!

--- a/plugins/system/joomlasvg/language/en-GB/en-GB.plg_system_joomlasvg.ini
+++ b/plugins/system/joomlasvg/language/en-GB/en-GB.plg_system_joomlasvg.ini
@@ -1,2 +1,6 @@
+;; @package   JoomlaSVGSupport
+;; @copyright Copyright (c)2020-2021 Nicholas K. Dionysopoulos
+;; @license   GNU General Public License version 3, or later
+
 PLG_SYSTEM_JOOMLASVG_ERR_UPLOAD_DISAPPEARED="Cannot upload SVG file. The temporary uploaded file has disappeared or is no longer readable by PHP."
 PLG_SYSTEM_JOOMLASVG_ERR_INVALID_FILE="Cannot upload SVG file. The file is corrupt or not a valid SVG."
