--- a/plugins/system/joomlasvg/language/en-GB/en-GB.plg_system_joomlasvg.sys.ini
+++ b/plugins/system/joomlasvg/language/en-GB/en-GB.plg_system_joomlasvg.sys.ini
@@ -1,2 +1,6 @@
+;; @package   JoomlaSVGSupport
+;; @copyright Copyright (c)2020-2021 Nicholas K. Dionysopoulos
+;; @license   GNU General Public License version 3, or later
+
 PLG_SYSTEM_JOOMLASVG="System - SVG Support for Joomla!"
 PLG_SYSTEM_JOOMLASVG_XML_DESC="Adds SVG support to Joomla 3: upload, select and preview. SVGs are sanitized on upload to prevent XSS."
